fix regression with dark mode white flash and low contrast

--- a/frontend/styles/overrides/SegmentedControl.module.css
+++ b/frontend/styles/overrides/SegmentedControl.module.css
@@ -48,6 +48,7 @@
 
 .label[data-active="true"] {
 	color: var(--color-system-text-100);
+	--sc-color: var(--color-system-background-100);
 }
 
 .label[data-disabled="true"] {
